fix button IOS

--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -4,11 +4,13 @@
   align-items: center;
   justify-content: end;
   height: 200px;
-  .btn-check:focus+.btn, .btn:focus{
+  .btn-check:focus + .btn,
+  .btn:focus {
     box-shadow: none;
   }
- 
+
   button {
+    -webkit-appearance: none;
     border-radius: 2rem;
     width: 180px;
     height: 45px;
@@ -19,9 +21,8 @@
     -o-border-radius: 2rem;
     background-color: #000000;
     color: $color9;
-   
   }
   button:hover {
-    color: white
+    color: white;
   }
 }
